implementing redirect url saving

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Ruby TDS</title>
   <%= stylesheet_link_tag "application", :media => "all" %>
-  <% stylesheet_link_tag "bootstrap", :media => "screen" %>
+  <% stylesheet_link_tag "bootstrap.min", :media => "screen" %>
 
   <%= javascript_include_tag "application" %>
-  <%= javascript_include_tag "bootstrap" %>
+  <%= javascript_include_tag "bootstrap.min" %>
 
   <%= csrf_meta_tags %>
 </head>
