showing visitors count

--- a/app/views/configurations/index.html.erb
+++ b/app/views/configurations/index.html.erb
@@ -5,6 +5,7 @@
       <th>#</th>
       <th>Landing url</th>
       <th>Redirect url</th>
+      <th>Visitors</th>
       <th></th>
     </tr>
     </thead>
@@ -14,6 +15,7 @@
           <td><%= config.id %></td>
           <td><%= link_to config.landing_url, config.landing_url %></td>
           <td><%= link_to config.redirect_url, config.redirect_url %></td>
+          <td><%= config.visitors.length %></td>
           <td><%= button_to 'Delete', configuration_path(config.id), :method => :delete, :class => 'btn btn-danger', :confirm => 'Delete configuration?' %></td>
         </tr>
     <% end %>
